Support multiple lines for status text on Chooser UI

This CL updated code to support multiple lines for status text. This
fixed the issue when the translated status text is too long to be
displayed in one line.

BUG=630955

Review-Url: https://codereview.chromium.org/2200193004
Cr-Commit-Position: refs/heads/master@{#410158}

Former-commit-id: 37e24c4337dd6c5f8e41768d5d792edb52e52d60